* Task sorting by name * Removed the CI script